--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,11 +1,16 @@
 {% assign work = include.work %}
+{% assign link_url = work.href | default: work.url %}
+{% if link_url contains 'http://' or link_url contains 'https://' %}
+  {% assign is_external = true %}
+{% else %}
+  {% assign is_external = false %}
+{% endif %}
 <li class="card">
   {% if work.featured and work.image %}
   <a
     class="card__image-link"
-    href="{% if work.href %}{{ work.href }}{% elsif work.url %}{{
-      work.url
-    }}{% endif %}"
+    href="{{ link_url }}"
+    {% if is_external %}target="_blank" rel="noopener noreferrer"{% endif %}
   >
     <img
       class="card__image"
@@ -20,9 +25,8 @@
       class="card__title{% if work.featured %} card__title--featured{% endif %}"
     >
       <a
-        href="{% if work.href %}{{ work.href }}{% elsif work.url %}{{
-          work.url
-        }}{% endif %}"
+        href="{{ link_url }}"
+        {% if is_external %}target="_blank" rel="noopener noreferrer"{% endif %}
         >{% if work.short_title %}{{ work.short_title }}{% else %}{{
           work.title
         }}{% endif %}</a
