--- a/_includes/post_card.html
+++ b/_includes/post_card.html
@@ -1,11 +1,16 @@
 {% assign work = include.work %}
+{% assign link_url = work.href | default: work.url %}
+{% if link_url contains 'http://' or link_url contains 'https://' %}
+  {% assign is_external = true %}
+{% else %}
+  {% assign is_external = false %}
+{% endif %}
 <li class="card">
   {% if work.featured and work.image %}
   <a
     class="card__image-link"
-    href="{% if work.href %}{{ work.href }}{% elsif work.url %}{{
-      work.url
-    }}{% endif %}"
+    href="{{ link_url }}"
+    {% if is_external %}target="_blank" rel="noopener noreferrer"{% endif %}
   >
     <img
       class="card__image"
@@ -17,14 +22,17 @@
 
   <div class="card__content">
     <h3 class="card__title card__title--featured">
-      <a
-        href="{% if work.href %}{{ work.href }}{% elsif work.url %}{{
-          work.url
-        }}{% endif %}"
-        >{% if work.short_title %}{{ work.short_title }}{% else %}{{
-          work.title
-        }}{% endif %}</a
-      >
+      {% if work.no_title_link %}
+        {% if work.short_title %}{{ work.short_title }}{% else %}{{ work.title }}{% endif %}
+      {% else %}
+        <a
+          href="{{ link_url }}"
+          {% if is_external %}target="_blank" rel="noopener noreferrer"{% endif %}
+          >{% if work.short_title %}{{ work.short_title }}{% else %}{{
+            work.title
+          }}{% endif %}</a
+        >
+      {% endif %}
     </h3>
     {% if work.authors %}
     <div class="post__metadata">
