--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,7 +5,7 @@
   <body>
     {% if page.show_categories != nil %} {% assign show_categories =
     page.show_categories %} {% else %} {% assign show_categories = true %} {%
-    endif %} {% include top_navigation.html show_categories=show_categories %}
+    endif %} {% include top_navigation.html show_categories=show_categories show_about=page.show_about %}
 
     <main class="l-center l-content">
       <h1>{{ page.title }}</h1>
