--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,15 +8,11 @@
         <a href="/">
           <img
             class="map__logo"
-            src="/assets/logo.svg"
-            alt="Metric Geometry and Gerrymandering Group"
+            src="/assets/draft_logo_compact.svg"
+            alt="Data and Democracy Lab"
           />
         </a>
-        <a href="/">
-          <h1 class="map__title">
-            Redistricting Lab
-          </h1>
-        </a>
+        
       </div>
       <header class="site-header" id="about-mggg">
         <nav class="map__nav l-center">
