--- a/_includes/personal_navigation.html
+++ b/_includes/personal_navigation.html
@@ -4,8 +4,8 @@
       <a href="/">
         <img
           class="site-nav__logo__img"
-          src="/assets/logo.svg"
-          alt="Metric Geometry and Gerrymandering Group"
+          src="/assets/draft_logo.svg"
+          alt="Data and Democracy Lab"
         />
       </a>
       <script>
