--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,7 @@
   {% include head.html %}
 
   <body>
+    {% include top_navigation.html show_categories=false show_about=false %}
     <section class="map">
       <div class="map__inset">
         <a href="/">
@@ -14,16 +15,9 @@
         </a>
         
       </div>
-      <header class="site-header" id="about-mggg">
-        <nav class="map__nav l-center">
-          <ul class="nav-links site-nav__contents site-nav__contents--show">
-            {% include nav-links.html %}
-          </ul>
-        </nav>
-      </header>
       <div class="map__nav-shadow"></div>
     </section>
-    <main class="l-center l-content">{{ content }}</main>
+    <main class="l-center l-content" id="about-mggg">{{ content }}</main>
 
     {% include footer.html %}
   </body>
