--- a/_includes/post_heading.html
+++ b/_includes/post_heading.html
@@ -1,10 +1,23 @@
 <h1 class="post__heading">{{ page.title }}</h1>
 <div class="post__metadata">
-  <div class="post__authors">{{ page.authors }}</div>
+  {% assign hide_date = false %}
   {% if page.date %}
-  <div class="post__date">
-    {{ page.date | date_to_long_string }}
-  </div>
+    {% if page.categories contains "basics" %}
+      {% assign hide_date = true %}
+    {% endif %}
+    {% if page.categories contains "research" %}
+      {% assign hide_date = true %}
+    {% endif %}
+  {% else %}
+    {% assign hide_date = true %}
+  {% endif %}
+  <div class="post__authors{% if hide_date %} post__authors--no-date{% endif %}">{{ page.authors }}</div>
+  {% if page.date %}
+    {% unless hide_date %}
+    <div class="post__date">
+      {{ page.date | date_to_long_string }}
+    </div>
+    {% endunless %}
   {% endif %}
 </div>
 {% if page.image %}
