--- a/_includes/post_heading.html
+++ b/_includes/post_heading.html
@@ -20,7 +20,7 @@
     {% endunless %}
   {% endif %}
 </div>
-{% if page.image %}
+{% if page.image and page.title != "Interactives" %}
 <figure class="post__image">
   <img
     class="post__image"
