--- a/_includes/excerpt.html
+++ b/_includes/excerpt.html
@@ -10,6 +10,12 @@
     {% if post.categories contains "research" %}
       {% assign hide_date = true %}
     {% endif %}
+    {% if post.categories contains "civic-tech" %}
+      {% assign hide_date = true %}
+    {% endif %}
+    {% if post.categories contains "reports" %}
+      {% assign hide_date = true %}
+    {% endif %}
     <div class="post__authors{% if hide_date %} post__authors--no-date{% endif %}">{{ post.authors }}</div>
     {% unless hide_date %}
     <div class="post__date">{{ post.date | date_to_long_string }}</div>
