--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -48,4 +48,14 @@
   max-width: 100%;
   max-height: 20rem;
   overflow: hidden;
+  margin: 1rem auto;
+  display: block;
+  text-align: center;
+}
+
+.post__image img {
+  max-width: 100%;
+  max-height: 20rem;
+  display: block;
+  margin: 0 auto;
 }
