implement new logos in html

--- a/_includes/top_navigation.html
+++ b/_includes/top_navigation.html
@@ -4,7 +4,7 @@
       <a href="/">
         <img
           class="site-nav__logo__img"
-          src="/assets/draft_logo.svg"
+          src="/assets/reynolds_redesign/DDL_Lab-less_Color_RGB.svg"
           alt="Data and Democracy Lab"
         />
       </a>
