--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/Favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/reynolds_redesign/DDL_Favicon.ico" />
   <title>
     {% if page.title %} {{ page.title }} | {% endif %}Data and Democracy Lab
   </title>
