reformat basics page

--- a/_includes/basic_post.html
+++ b/_includes/basic_post.html
@@ -4,7 +4,7 @@
     
   <img
     src="{{ person.photo }}"
-    class="bio__img"
+    class="basic__img"
     alt="A photo of {{ person.name }}"
   />
 </dt>
