--- a/_includes/top_navigation.html
+++ b/_includes/top_navigation.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <nav class="site-nav l-center">
+  <nav class="site-nav">
     <div class="site-nav__logo">
       <a href="/">
         <img
